# job-application-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: TOOLS.md
docs/architecture/: hello-agents-job-application-agent.md
docs/superpowers/plans/: 2026-07-08-job-application-agent-mvp.md  2026-07-09-job-application-agent-alignment.md
docs/superpowers/specs/: 2026-07-08-job-application-agent-peas-design.md  2026-07-09-job-application-agent-execution-readiness-audit.md
examples/: form-snapshot.json  offline-jobs.xml  offline-sources.json  profile.json
src/hello_agents/: __init__.py
src/hello_agents/agents/: __init__.py  job_application_agent.py  plan_solve_agent.py  simple_agent.py
src/hello_agents/career/: __init__.py  models.py
src/hello_agents/tools/: __init__.py  async_executor.py  chain.py
src/hello_agents/tools/builtin/: __init__.py  calculator.py  search.py
src/job_agent/: __init__.py  cli.py  config.py  db.py  document_export.py  execution.py  forms.py  jd_analysis.py  jobs.py  models.py  packages.py  profile.py  reports.py  resume_plans.py  resumes.py  runners.py  runtime_filler.py  scoring.py  sensitive_kb.py  shortlist.py  source_config.py
tests/: test_cli.py  test_cli_llm.py  test_config.py  test_db.py  test_document_export.py  test_execution.py  test_forms.py  test_hello_agents_base.py  test_hello_agents_career.py  test_jobs.py  test_profile.py  test_reports.py  test_resume_plans.py  test_resumes.py  test_runners.py  test_runtime_filler.py  test_scoring.py  test_sensitive_kb.py  test_shortlist.py  test_source_config.py
(+11 files in other folders)
